syntax = "proto3";

package user.auth;

option go_package = "infrastructure/grpc_infr/user/auth;auth";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

message LoginRequest {
  string identifier = 1;
  string password = 2;
}

message LoginResponse {
  bool is_password_correct = 1;
  string access_token = 2;
  string refresh_token = 3;
  bool is_verified = 4;
  int32 user_iD = 5;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int32 user_iD = 3;
}
